# atest

./: .gitignore  Index.html  README.md  pyproject.toml  run_app.bat
atest-main/: bootstrap_env.bat  pyproject.toml
atest-main/app/: __init__.py
atest-main/app/core/: application.py  engine.py  service.py
atest-main/app/core/events/: models.py
atest-main/app/core/services/: __init__.py  import_export_service.py
atest-main/app/core/simulation/: engine.py  processors.py  service.py
atest-main/app/data/: __init__.py
atest-main/app/data/jsonio/: __init__.py  exporter.py  schema.py
atest-main/app/data/repositories/: base.py  continent_repository.py  empire_repository.py  kingdom_repository.py  region_repository.py  route_repository.py  settlement_repository.py  world_repository.py
atest-main/app/data/snapshots/: __init__.py  manager.py
atest-main/app/data/sqlite/: database.py
atest-main/app/domain/events/: event.py
atest-main/app/domain/models/: __init__.py  entity.py  relationship.py
atest-main/app/domain/rules/: ruleset.py
atest-main/app/infra/pdf/: exporter.py
atest-main/app/ui/: main.py
atest-main/app/ui/views/: dashboard.py  map_view.py  snapshots.py  world_overview.py
atest-main/data/snapshots/: snapshot-20260416T070100Z-df23ae3f-5092-4abf-8ab4-0dc1f62c8619.json  snapshot-20260416T070100Z-df23ae3f-5092-4abf-8ab4-0dc1f62c8619.package.json
atest-main/tests/: __init__.py  test_smoke.py
css/: style.css
pages/: Projects.html  about_me.html  contact_me.html
tests/: __init__.py  test_phase3.py  test_phase4.py  test_phase5.py  (+2 more)
(+61 files in other folders)
